fix issues on mobile

--- a/src/assets/scss/components/_components.board.scss
+++ b/src/assets/scss/components/_components.board.scss
@@ -1,7 +1,3 @@
-.container {
-  overflow-x: auto;
-}
-
 .game-guide {
   margin-bottom: 16px;
   font-size: 18px;
@@ -10,8 +6,9 @@
 
 .board-container {
   position: relative;
+  width: 100%;
   padding: 42px 0 64px 54px;
-  overflow-x: auto;
+  overflow: auto;
 }
 
 .board__inner {
