--- a/src/assets/scss/components/_components.sprite.scss
+++ b/src/assets/scss/components/_components.sprite.scss
@@ -1,5 +1,5 @@
 .sprite-container {
-  position: absolute;
+  position: fixed;
   top: -1px;
   visibility: hidden;
   opacity: 0;
